# aoc

./: pyproject.toml
2015/: 0_play.ipynb  bitwise_testing.ipynb  day07.ipynb  day07.py  day08.py  day09.py  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day9.ipynb  start.py  test.txt
2015/input/: day08.txt
2016/: day01.ipynb  day01.py  day02.py  day03.py  day21.py
2023/: day1.ipynb
2024/: day1.ipynb  day10.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
2025/: day01.ipynb  day02.ipynb  day03.ipynb  day03.py  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day09.py  utils.py
aoc_utils/: data_import.py  file_creation.py  matrix.py
